# SERPv2

./: .gitignore  LICENSE.md  Makefile  README.md  ToDoSERPv2.md  create_emergency_scenario.sh  docker-compose.deploy-dev.yml  docker-compose.deploy.yml  docker-compose.react-build.yml  docker-compose.yml  mggrefactor.md
SERP-nokia-nac/: main.py  requirements.txt
backend/: .env  .pylintrc  Dockerfile  Makefile  README.md  commands.txt  entrypoint.sh  main.py  pyproject.toml  requirements.txt  requirements.txt.back  test.db
backend/alembic/: env.py
backend/alembic/versions/: 587eda2c14ee_first_migration.py  845d5c70eaf2_first_migration.py  c1617e32de9c_first_migration.py
backend/commands/: seed_db.py
backend/scripts/: migrate.py
backend/src/: structure.md
backend/src/commands/: seed_db.py
backend/src/configs/: DBSessionManager copy.py  DBSessionManager.py  config.py  database copy.py  database.py  databaseOld.py  db_session_manager.py
backend/src/models/: __init__.py  address.py  emergency.py  emergencyresourceslink.py  location.py  models.py  resource.py  user.py
backend/src/routes/: emergencies.py  location.py  qosod.py  resources.py
backend/src/seeders/: address.py  emergency.py  location.py  main.py  resource.py  user.py
backend/src/services/: emergency_assignments.py  helpers.py  opencameragateway.py
backend/tests/: conftest.py  test_conf.py
backend/tests/integration/: test_resources.py
backend/tests/intregration/: test_emergencies.py  test_resources.py
docker/: .gitignore
frontend/: .dockerignore  README.md  package.json
nginx/: Dockerfile
scripts/: privileges-deploy.sh  privileges-development.sh
serp-fastapi/: .env  .gitignore  .pylintrc  Dockerfile  DockerfileDeploy  Makefile  main.py  requirements (copy).txt
serp-react/: .env.production  Dockerfile  DockerfileBuild  README.md  package-lock.json  (+1 more)
(+76 files in other folders)
