[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A FastAPI project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7"

[tool.poetry.dev-dependencies]
black = "^24.4"
isort = "^5.13"
flake8 = "^7.0"
mypy = "^1.9"
pytest = "^8.2"
pytest-cov = "^5.0"
bandit = "^1.7"
pylint = "^3.2"
httpx = "^0.27"  # for testing FastAPI endpoints

# -----------------------------------------------------------------------------
# Tool Configurations
# -----------------------------------------------------------------------------

[tool.black]
line-length = 79
target-version = ["py311"]
# include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["app"]
known_third_party = ["fastapi", "uvicorn", "pydantic"]
skip = [".venv", "build", "dist"]

[tool.flake8]
max-line-length = 79
extend-ignore = [
    "E203",  # space before ':', conflicts with Black
    "W503"   # line break before binary operator, also Black-compatible
]
exclude = ".venv,build,dist,.git,__pycache__,.mypy_cache"
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = 'tests/|.venv/'

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]

[tool.bandit]
skips = ["B101"]  # Optional: skip assert usage warning

[tool.coverage.run]
source = ['src']

